-Started integration of glazed lists -Data is now populated from a background task -All lists should be derived from the main client list -Most actions work again, but more work needs to be performed on this